--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,11 +35,11 @@ stages:
      
       - powershell: |
            echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]$(Version) is up)"
-        name: setvarStep
+        name: int1state
         condition: and(succeeded(), eq(variables['Version'], 'int1'))
       - powershell: |
            echo "##vso[task.setvariable variable=myOutputVar;isOutput=true]$(Version) is down)"
-        name: setvarStep
+        name: int1state
         condition: and(Failed(), eq(variables['Version'], 'int1'))
       - powershell: |
            echo "##vso[task.setvariable variable=qcx;isOutput=true]$(Version) is up)"
